# document-qa-bot

./: .env-template  .gitignore  README.md  pdf_qa.py  pyproject.toml  shadowrun_gm_example.ipynb
document_qa_bot/: pdf_qa_app.py  pdf_qa_gradio.py
document_qa_bot/templates/: index.html
document_qa_bot/tools/: document_store.py
