[tool.poetry]
name = "document_qa_bot"
version = "0.1.0"
description = ""
authors = ["Johannes Hackbarth"]

[tool.poetry.dependencies]
python = "^3.10"
langchain = ">=0.1.0"
openai = ">=1.0.0"
pypdf = "^3.17.0"
jupyter = "^1.0.0"
chromadb = "<0.4.16"
tiktoken = "^0.5.1"
InstructorEmbedding = "^1.0.1"
torch = "^2.1.0"
flask = "^3.0.0"
sentence-transformers = "^2.2.2"
pysqlite3-binary = "^0.5.2.post2"
gradio = "^4.18.0"
langchain-community = "^0.0.34"
langchain-openai = "^0.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
